--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
     />
   </head>
   <body>
-    <header>
+        <header>
       <div class="container">
         <div class="header-nav">
           <a class="title-discription" href="#WebStudio"
             ><span class="weblogo">Web</span>Studio</a
           >
-          <nav>
-            <ul class="nav-menu">
+          <nav class="nav-content">
+            <ul class="list nav-menu">
               <li>
-                <a class="menu-discription" href="./index.html">Agencja</a>
+                <a class="link index-discription" href="./index.html">Agencja</a>
               </li>
               <li>
-                <a class="menu-discription" href="./portfolio.html"
+                <a class="link" href="./portfolio.html"
                   >Portfolio</a
                 >
               </li>
-
-              <li><a class="menu-discription" href="/Kontakt">Kontakt</a></li>
+              <li>
+                <a class="link" href="/Kontakt">Kontakt</a>
+              </li>
             </ul>
           </nav>
           <ul class="contact-menu">
@@ -53,7 +54,7 @@
             </li>
             <li>
               <a class="contact-discription" href="tel:+48111111111"
-                ><svg width="16 " height="12" class="icon-mail">
+                ><svg width="10" height="16" class="icon-mail">
                   <use
                     href="./images/icons.svg/icons.svg#icon-smartphone"
                   ></use>
@@ -148,6 +149,7 @@
                 width="370"
                 height="294"
               />
+              <p class="first-photo-content">APLIKACJE MOBILNE</p>
             </li>
             <li class="first-photo">
               <img
@@ -156,6 +158,7 @@
                 width="370"
                 height="294"
               />
+              <p class="first-photo-content">APLIKACJE KOMPUTEROWE</p>
             </li>
             <li class="first-photo">
               <img
@@ -164,6 +167,7 @@
                 width="370"
                 height="294"
               />
+              <p class="first-photo-content">ROZWIĄZANIA GRAFICZNE</p>
             </li>
           </ul>
         </div>
@@ -502,8 +506,8 @@
     </footer>
 <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="close-btn" data-modal-close>
-                <svg class="icon-Vector">
+            <button type="button" class="close-first-button" data-modal-close>
+                <svg class="icon-close">
                     <use href="./images/icons.svg/icons.svg#icon-close"></use>
                 </svg>
             </button>
