--- a/portfolio.html
+++ b/portfolio.html
@@ -112,11 +112,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image2portfolio.jpg"
-                alt="Mecz koszykówki"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image2portfolio.jpg"
+                  alt="Mecz koszykówki"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Grafika New Orlean vs Golden Star</h3>
                 <p class="project-discription">Dizajn</p>
@@ -124,11 +132,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image3portfolio.jpg"
-                alt="Logo restauracji"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image3portfolio.jpg"
+                  alt="Logo restauracji"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Restauracja Seafood</h3>
                 <p class="project-discription">Aplikacja</p>
@@ -136,11 +152,20 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image4portfolio.jpg"
-                alt="Słuchawki bezprzewodowe"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image4portfolio.jpg"
+                  alt="Słuchawki bezprzewodowe"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
+
               <div>
                 <h3 class="project-name">Projekt Prime</h3>
                 <p class="project-discription">Marketing</p>
@@ -148,11 +173,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image5portfolio.jpg"
-                alt="Pudełka kartonowe"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image5portfolio.jpg"
+                  alt="Pudełka kartonowe"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Projekt Boxes</h3>
                 <p class="project-discription">Aplikacja</p>
@@ -160,11 +193,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image6portfolio.jpg"
-                alt="Ekran monitora"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image6portfolio.jpg"
+                  alt="Ekran monitora"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Inspiration has no Borders</h3>
                 <p class="project-discription">Strona internetowa</p>
@@ -172,11 +213,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image7portfolio.jpg"
-                alt="Książka"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image7portfolio.jpg"
+                  alt="Książka"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Magazyn Limited Edition</h3>
                 <p class="project-discription">Dizajn</p>
@@ -184,11 +233,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image8portfolio.jpg"
-                alt="Etykieta"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image8portfolio.jpg"
+                  alt="Etykieta"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Projekt LAB</h3>
                 <p class="project-discription">Marketing</p>
@@ -196,11 +253,19 @@
             </li>
 
             <li class="work-content">
-              <img
-                src="./images/image9portoflio.jpg"
-                alt="Laptop z otwartą stroną internetową"
-                height="294"
-              />
+              <div class="photo-overlay">
+                <img
+                  src="./images/image9portoflio.jpg"
+                  alt="Laptop z otwartą stroną internetową"
+                  height="294"
+                />
+                <div class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </div>
+              </div>
               <div>
                 <h3 class="project-name">Growing Business</h3>
                 <p class="project-discription">Aplikacja</p>
